@@ -20,6 +20,7 @@ public class CourseGrid {
     private final Map<Integer, GridPoint> teeLocations;
     private final Map<Integer, GridPoint> holeLocations;
     private final Map<Integer, Integer> holePars;
+    private final Map<Integer, List<GridPoint>> holeRoutePoints;
     private ObstacleGenerator obstacleGenerator;
 
     private boolean generated;
@@ -47,6 +48,7 @@ public class CourseGrid {
         this.teeLocations = new HashMap<>();
         this.holeLocations = new HashMap<>();
         this.holePars = new HashMap<>();
+        this.holeRoutePoints = new HashMap<>();
     }
 
     public Location toLocation(World world, GridPoint point) {
@@ -68,13 +70,8 @@ public class CourseGrid {
         if (this.generated) return;
 
         initializeSuperposition();
-
-        // 1) seed macro masks if you want (elevation, water basins, veg) - not shown here.
-
-        // 2) Place tees & pins using sampling + pairing
         placeTeesAndPins();
 
-        // 3) Route holes & carve corridors
         for (int holeId = 0; holeId < numHoles; holeId++) {
             GridPoint teeLoc = teeLocations.get(holeId);
             GridPoint pinLoc = holeLocations.get(holeId);
@@ -82,19 +79,14 @@ public class CourseGrid {
             Tile pinTile = tileAtPoint(pinLoc);
             List<Tile> path = route(teeTile, pinTile);
             if (path == null || path.isEmpty()) {
-                // fallback: straight line carve
                 path = straightLine(teeTile, pinTile);
             }
+            storeRoute(holeId, path);
             carveCorridor(path);
             assignPar(holeId, path);
-            // propagate constraints from carved fairway tiles
-            propagateFairwayConstraints();
+
         }
-
-        // 4) Finalize remaining tiles (mark as light/heavy rough, water, out_of_bounds, etc.)
         finalizeUnresolvedTiles();
-
-        // 5) Initialize obstacle generator and place obstacles respecting masks & safety.
         this.generated = true;
         this.obstacleGenerator = new ObstacleGenerator(this, division);
 
@@ -105,68 +97,64 @@ public class CourseGrid {
         this.obstacleGenerator.generateObstacles(world);
     }
 
-    /* ------------------------
-       Tee/pin placement helpers
-       ------------------------ */
-
     private void placeTeesAndPins() {
-        // Simple Poisson-like sampling: dart-throwing with min distance between anchors
         List<int[]> anchors = sampleAnchors(numHoles * 2, Math.max(8, Math.min(width, depth) / 8));
-        // Greedy pair: split anchors into tees and pins in two halves and pair by distance constraints
         List<int[]> tees = new ArrayList<>();
         List<int[]> pins = new ArrayList<>();
 
-        // assign tees roughly on left half, pins roughly on right half to encourage variety
-        for (int[] a : anchors) {
-            if (a[0] < width / 2) tees.add(a);
-            else pins.add(a);
+
+        for (int[] anchor : anchors) {
+            if (anchor[0] < width / 2) tees.add(anchor);
+            else pins.add(anchor);
         }
 
-        // Ensure we have enough anchors; if not, fallback to random placements (edge bias removed)
         while (tees.size() < numHoles) tees.add(new int[]{random.nextInt(width), random.nextInt(depth)});
         while (pins.size() < numHoles) pins.add(new int[]{random.nextInt(width), random.nextInt(depth)});
 
-        // pair greedily by closest distance within practical bounds
-        int MIN_D = Math.max(10, Math.min(width, depth) / 6);
-        int MAX_D = Math.max(MIN_D + 10, Math.max(width, depth) / 2);
+        Collections.shuffle(tees, random);
+        Collections.shuffle(pins, random);
+
+        int minDistance = Math.max(6, Math.min(width, depth) / 5);
+        int maxDistance = Math.max(minDistance + 8, Math.max(width, depth) / 2);
 
         for (int i = 0; i < numHoles; i++) {
-            int[] t = tees.get(i % tees.size());
-            int[] p = pins.get(i % pins.size());
+            int[] tee = tees.get(i % tees.size());
+            int[] pin = findPinForTee(tee, pins, minDistance, maxDistance);
 
-            // if too close or too far, jitter pin
-            int dx = t[0] - p[0], dz = t[1] - p[1];
-            int dist = (int) Math.hypot(dx, dz);
-            if (dist < MIN_D || dist > MAX_D) {
-                // attempt to find a pin candidate that fits
-                boolean found = false;
-                for (int[] cand : pins) {
-                    dx = t[0] - cand[0];
-                    dz = t[1] - cand[1];
-                    dist = (int) Math.hypot(dx, dz);
-                    if (dist >= MIN_D && dist <= MAX_D) {
-                        p = cand;
-                        found = true;
-                        break;
-                    }
-                }
-                if (!found) {
-                    // jitter
-                    p = new int[]{Math.clamp(t[0] + (random.nextInt(2 * MAX_D) - MAX_D), 0, width - 1),
-                            Math.clamp(t[1] + (random.nextInt(2 * MAX_D) - MAX_D), 0, depth - 1)};
-                }
-            }
-
-            GridPoint teeLoc = new GridPoint((int) (t[0] * TILE_SIZE + TILE_SIZE / 2.0), 64, (int) (t[1] * TILE_SIZE + TILE_SIZE / 2.0));
-            GridPoint pinLoc = new GridPoint((int) (p[0] * TILE_SIZE + TILE_SIZE / 2.0), 64, (int) (p[1] * TILE_SIZE + TILE_SIZE / 2.0));
+            GridPoint teeLoc = new GridPoint((int) (tee[0] * TILE_SIZE + TILE_SIZE / 2.0), 64, (int) (tee[1] * TILE_SIZE + TILE_SIZE / 2.0));
+            GridPoint pinLoc = new GridPoint((int) (pin[0] * TILE_SIZE + TILE_SIZE / 2.0), 64, (int) (pin[1] * TILE_SIZE + TILE_SIZE / 2.0));
 
             this.teeLocations.put(i, teeLoc);
             this.holeLocations.put(i, pinLoc);
 
-            // collapse tiles to TEEs / PINS now
             tileAtPoint(teeLoc).collapseTo(TileTypes.TEE);
             tileAtPoint(pinLoc).collapseTo(TileTypes.PIN);
         }
+    }
+
+    private int[] findPinForTee(int[] tee, List<int[]> pins, int minDistance, int maxDistance) {
+        int[] bestPin = pins.get(random.nextInt(pins.size()));
+        int bestPenalty = Integer.MAX_VALUE;
+
+        for (int[] candidate : pins) {
+            int dx = tee[0] - candidate[0];
+            int dz = tee[1] - candidate[1];
+            int distance = (int) Math.hypot(dx, dz);
+            int penalty = 0;
+
+            if (distance < minDistance) {
+                penalty = minDistance - distance;
+            } else if (distance > maxDistance) {
+                penalty = distance - maxDistance;
+            }
+
+            if (penalty < bestPenalty) {
+                bestPenalty = penalty;
+                bestPin = candidate;
+            }
+        }
+
+        return bestPin;
     }
 
     private List<int[]> sampleAnchors(int count, int minDist) {
@@ -203,7 +191,7 @@ public class CourseGrid {
         record Node(int x, int z, int dir, double g, double f, Node parent) {
         }
 
-        PriorityQueue<Node> open = new PriorityQueue<>(Comparator.comparingDouble(n -> n.f));
+        PriorityQueue<Node> open = new PriorityQueue<>(Comparator.comparingDouble(node -> node.f));
         boolean[][][] closed = new boolean[width][depth][4];
 
         // seed all four directions from start
@@ -219,11 +207,12 @@ public class CourseGrid {
 
             if (cur.x == gx && cur.z == gz) {
                 List<Tile> path = new ArrayList<>();
-                Node n = cur;
-                while (n != null) {
-                    path.add(grid[n.x][n.z]);
-                    n = n.parent;
+                Node node = cur;
+                while (node != null) {
+                    path.add(grid[node.x][node.z]);
+                    node = node.parent;
                 }
+
                 Collections.reverse(path);
                 return path;
             }
@@ -233,11 +222,10 @@ public class CourseGrid {
                 int nz = cur.z + DIRS[nd][1];
                 if (!isInBounds(nx, nz)) continue;
 
-                double turnCost = (nd == cur.dir) ? 0.0 : 0.6; // penalize turns
-                double slopeCost = 0.0; // hook for elevation field
+                double turnCost = (nd == cur.dir) ? 0.0 : 0.8;
                 double hazardCost = tileHazardCost(nx, nz);
 
-                double g = cur.g + 1.0 + turnCost + slopeCost + hazardCost;
+                double g = cur.g + 1.0 + turnCost + hazardCost;
                 double h = Math.abs(nx - gx) + Math.abs(nz - gz);
                 double f = g + h;
                 if (!closed[nx][nz][nd]) open.add(new Node(nx, nz, nd, g, f, cur));
@@ -247,9 +235,12 @@ public class CourseGrid {
     }
 
     private double tileHazardCost(int x, int z) {
-        TileTypes t = grid[x][z].getCollapsedState();
-        if (t == TileTypes.WATER) return 6.0;
-        if (t == TileTypes.OUT_OF_BOUNDS) return 10.0;
+        TileTypes type = grid[x][z].getCollapsedState();
+        if (type == TileTypes.WATER) return 6.0;
+        if (type == TileTypes.OUT_OF_BOUNDS) return 10.0;
+        if (type == TileTypes.PIN || type == TileTypes.TEE) return 2.0;
+        if (type == TileTypes.FAIRWAY) return 3.0;
+        if (type == TileTypes.HEAVY_ROUGH) return 4.0;
         return 0.0;
     }
 
@@ -259,15 +250,25 @@ public class CourseGrid {
         int bx = (b.getGridPoint().x / TILE_SIZE);
         int bz = (b.getGridPoint().z / TILE_SIZE);
         List<Tile> path = new ArrayList<>();
-        int dx = Integer.signum(bx - ax), dz = Integer.signum(bz - az);
         int x = ax, z = az;
+        path.add(grid[x][z]);
         while (x != bx || z != bz) {
+            if (Math.abs(bx - x) >= Math.abs(bz - z) && x != bx) {
+                x += Integer.signum(bx - x);
+            } else if (z != bz) {
+                z += Integer.signum(bz - z);
+            }
             path.add(grid[x][z]);
-            if (x != bx) x += dx;
-            if (z != bz) z += dz;
         }
-        path.add(grid[bx][bz]);
         return path;
+    }
+
+    private void storeRoute(int holeId, List<Tile> path) {
+        List<GridPoint> route = new ArrayList<>();
+        for (Tile tile : path) {
+            route.add(tile.getGridPoint());
+        }
+        this.holeRoutePoints.put(holeId, List.copyOf(route));
     }
 
     /* ------------------------
@@ -283,10 +284,10 @@ public class CourseGrid {
             int cz = (center.getGridPoint().z / TILE_SIZE);
 
             double t = (n == 1) ? 0.0 : (i / (double) (n - 1));
-            double widen = landingZoneWeight(t); // 0..1
-            int fairwayR = (int) Math.round(lerp(1.0, 3.0, widen)); // tiles
-            int lightR = fairwayR + 1;
-            int heavyR = fairwayR + 2;
+            double widen = landingZoneWeight(t);
+            int fairwayR = (int) Math.round(lerp(2.0, 4.0, widen));
+            int lightR = fairwayR + 2;
+            int heavyR = fairwayR + 3;
 
             paintDisk(cx, cz, heavyR, TileTypes.HEAVY_ROUGH);
             paintDisk(cx, cz, lightR, TileTypes.LIGHT_ROUGH);
@@ -295,8 +296,9 @@ public class CourseGrid {
     }
 
     private double landingZoneWeight(double t) {
-        double m1 = Math.exp(-Math.pow((t - 0.45) / 0.18, 2));
-        return Math.min(1.0, m1);
+        double primaryLanding = Math.exp(-Math.pow((t - 0.45) / 0.18, 2));
+        double approachLanding = Math.exp(-Math.pow((t - 0.78) / 0.16, 2));
+        return Math.clamp(primaryLanding, approachLanding, 1.0);
     }
 
     private void paintDisk(int cx, int cz, int r, TileTypes setTo) {
@@ -306,11 +308,11 @@ public class CourseGrid {
                 if (!isInBounds(x, z)) continue;
                 int dx = x - cx, dz = z - cz;
                 if (dx * dx + dz * dz <= r2) {
-                    Tile t = grid[x][z];
-                    // Prefer not to overwrite TEE/PIN
-                    if (t.isCollapsed() && (t.getCollapsedState() == TileTypes.TEE || t.getCollapsedState() == TileTypes.PIN))
+                    Tile tile = grid[x][z];
+                    if (tile.isCollapsed() && (tile.getCollapsedState() == TileTypes.TEE || tile.getCollapsedState() == TileTypes.PIN)) {
                         continue;
-                    t.collapseTo(setTo);
+                    }
+                    tile.collapseTo(setTo);
                 }
             }
         }
@@ -362,17 +364,28 @@ public class CourseGrid {
     private void finalizeUnresolvedTiles() {
         for (int x = 0; x < width; x++) {
             for (int z = 0; z < depth; z++) {
-                Tile t = grid[x][z];
-                if (t.isCollapsed()) continue;
-                // basic mask: random water with low frequency; else heavy/light rough or obstacle
+                Tile tile = grid[x][z];
+                if (tile.isCollapsed()) continue;
+
+                if (isEdgeTile(x, z)) {
+                    tile.collapseTo(TileTypes.OUT_OF_BOUNDS);
+                    continue;
+                }
+
                 double r = random.nextDouble();
-                if (r < 0.06) t.collapseTo(TileTypes.WATER);
-                else if (r < 0.15) t.collapseTo(TileTypes.HEAVY_ROUGH);
-                else if (r < 0.2) t.collapseTo(TileTypes.LIGHT_ROUGH);
-                else t.collapseTo(TileTypes.OBSTACLE);
+                if (r < 0.03) tile.collapseTo(TileTypes.WATER);
+                else if (r < 0.08) tile.collapseTo(TileTypes.SAND);
+                else if (r < 0.55) tile.collapseTo(TileTypes.LIGHT_ROUGH);
+                else if (r < 0.78) tile.collapseTo(TileTypes.HEAVY_ROUGH);
+                else tile.collapseTo(TileTypes.OBSTACLE);
             }
         }
     }
+
+    private boolean isEdgeTile(int x, int z) {
+        return x == 0 || z == 0 || x == width - 1 || z == depth - 1;
+    }
+
 
     /* ------------------------
        Utilities
@@ -381,47 +394,13 @@ public class CourseGrid {
     private Tile tileAtPoint(GridPoint point) {
         int x = (point.x / TILE_SIZE);
         int z = (point.z / TILE_SIZE);
-        x = Math.max(0, Math.min(width - 1, x));
-        z = Math.max(0, Math.min(depth - 1, z));
+        x = Math.clamp(x, 0, width - 1);
+        z = Math.clamp(z, 0, depth - 1);
         return grid[x][z];
     }
 
     private boolean isInBounds(int x, int z) {
         return x >= 0 && x < width && z >= 0 && z < depth;
-    }
-
-    /* Propagate but don't prematurely return as original bug did */
-    private void propagateFairwayConstraints() {
-        for (int z = 0; z < depth; z++) {
-            for (int x = 0; x < width; x++) {
-                Tile tile = grid[x][z];
-                if (tile.isCollapsed() && tile.getCollapsedState() == TileTypes.FAIRWAY) {
-                    propagateConstraints(tile);
-                }
-            }
-        }
-    }
-
-    private void propagateConstraints(Tile tile) {
-        Queue<Tile> queue = new LinkedList<>();
-        queue.add(tile);
-
-        while (!queue.isEmpty()) {
-            Tile current = queue.poll();
-            int x = (current.getGridPoint().x / TILE_SIZE);
-            int z = (current.getGridPoint().z / TILE_SIZE);
-
-            for (int[] direction : DIRS) {
-                int nx = x + direction[0];
-                int nz = z + direction[1];
-                if (isInBounds(nx, nz)) {
-                    Tile neighbor = grid[nx][nz];
-                    if (!neighbor.isCollapsed()) continue; // NOTE: previously had 'return' here - fixed
-                    boolean updated = neighbor.updatePossibleStatesBasedOn(current);
-                    if (updated) queue.add(neighbor);
-                }
-            }
-        }
     }
 
     /* ------------------------
@@ -438,6 +417,14 @@ public class CourseGrid {
 
     public Map<Integer, Integer> getHolePars() {
         return Collections.unmodifiableMap(this.holePars);
+    }
+
+    public Map<Integer, List<GridPoint>> getHoleRoutePoints() {
+        Map<Integer, List<GridPoint>> copy = new HashMap<>();
+        for (Map.Entry<Integer, List<GridPoint>> entry : this.holeRoutePoints.entrySet()) {
+            copy.put(entry.getKey(), List.copyOf(entry.getValue()));
+        }
+        return Collections.unmodifiableMap(copy);
     }
 
     public int getWidth() {
